zero-schema-macros/tests/ui/fail/44_optional_array_element.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    values: [Option<Missing>; 2],
}

fn main() {}
