zero-schema-macros/tests/ui/fail/44_optional_array_element.stderr
error: Option<T> is not supported as a fixed-array element; put Option around the complete array
 --> tests/ui/fail/44_optional_array_element.rs:5:14
  |
5 |     values: [Option<Missing>; 2],
  |              ^^^^^^
